test_AdminMenuController